"Add index, fragments, login, register templates page and changed some setting."

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 # Database connection settings
 spring.datasource.url=jdbc:mysql://localhost:8889/u-grow
 spring.datasource.username=u-grow
-spring.datasource.password=plantingisfun
+spring.datasource.password=u-grow
 
 # Specify the DBMS
 spring.jpa.database = MYSQL
